--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -370,57 +370,51 @@ nav.show div.icon-close {
   margin-bottom: 0.75rem;
 }
 
-/*====  TESTIMONIALS ============================ */
-#testimonials {
+/*====  MENU ============================ */
+#menu {
   background: white;
 }
 
-#testimonials .container {
+#menu .container {
   margin-left: 0;
   margin-right: 0;
   position: relative;
   overflow: hidden;
 }
 
-#testimonials header {
+#menu header {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   margin-bottom: 0;
 }
 
-#testimonials blockquote {
+#menu header p {
+  color: var(--text-color)
+}
+
+#menu .menu-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-radius: 0.25rem;
 }
 
-#testimonials blockquote p {
-  position: relative;
-  text-indent: 1.875rem;
-  margin-bottom: 1.5rem;
-  color: var(--title-color);
+#menu .menu-card img {
+  width: 60%;
+  border-radius: 0.25rem;
 }
 
-#testimonials blockquote p span {
-  font: 700 2.5rem serif;
-  position: absolute;
-  top: -0.375rem;
-  left: -1.875rem;
-  color: var(--base-color);
+#menu .menu-card a {
+  text-decoration: underline;
+  font-size: large;
+  color: var(--base-color-alt);
 }
 
-#testimonials cite {
-  display: flex;
-  align-items: center;
-  font-style: normal;
-}
-
-#testimonials cite img {
-  width: 2rem;
-  height: 2rem;
-  object-fit: cover;
-  clip-path: circle();
-  margin-right: 0.5rem;
+#menu h3 {
+  font-size: 1.5rem;
 }
 
 /* swiper */
@@ -548,7 +542,7 @@ footer .social a:hover {
   }
 
   .section header,
-  #testimonials header {
+  #menu header {
     max-width: 32rem;
     text-align: center;
     margin-left: auto;
@@ -623,8 +617,8 @@ footer .social a:hover {
     padding-right: 3rem;
   }
 
-  /* testimonials */
-  #testimonials .container {
+  /* menu */
+  #menu .container {
     margin-left: auto;
     margin-right: auto;
   }
