--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -671,7 +671,7 @@ footer .social a:hover {
   justify-content: center;
   opacity: 0;
   visibility: hidden;
-  z-index: 99999999;
+  z-index: 9999;
 }
 
 .modal-overlay.active {
@@ -680,9 +680,57 @@ footer .social a:hover {
 }
 
 .modal {
+  position: relative;
+  width: fit-content;
+  max-width: 95%;
+  max-height: 95%;
+  height: auto;
   background: #fff;
   padding: 2.4rem;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.25rem;
+  gap: 1.2rem;
+}
+
+.modal .first-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+}
+
+.modal .first-box img {
+  border-radius: 0.25rem;
+}
+
+.modal .second-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  gap: 2rem;
+}
+
+.modal .second-box .prices {
+  padding-top: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.2rem;
+}
+
+.modal .icon-close {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
 }
 
 /* large devices: 1023 > */
@@ -695,3 +743,9 @@ footer .social a:hover {
 }
 
 /* medium devices: 767 > */
+
+@media (max-width: 767px) {
+  .modal {
+    flex-direction: column;
+  }
+}
